# worklog

./: .gitignore  .prettierrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  components.json  package-lock.json  package.json  project-plan.md  vite.config.ts
.cursor/rules/: package-management.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
Formula/: wl.rb
docs/: rust-best-practices.md
docs/specs/01-spec-wl-v2-rebuild/: 01-audit-wl-v2-rebuild.md  01-research-wl-v2-rebuild.md  01-spec-wl-v2-rebuild.md  01-tasks-wl-v2-rebuild.md  01-validation-wl-v2-rebuild.md
docs/specs/01-spec-wl-v2-rebuild/proofs/: 03-import-legacy-real-run.md  04-tui-smoke-test.md
src/: App.css  App.tsx  config.rs  error.tsx  globals.css  main.rs  main.tsx  markdown.rs  model.rs  notes.rs  standup.rs  store.rs  theme.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/commands/: import_legacy.rs  mod.rs  standup.rs  task.rs
src/components/ui/: action-button.tsx  button.tsx  keybind-preview.tsx  textarea.tsx
src/lib/: use-keybinds.ts
src/tui/: app.rs  editor.rs  mod.rs  tests.rs  textedit.rs
src/tui/views/: mod.rs  notes.rs  standup.rs  tasks.rs  today.rs
src/views/: TaskForm.tsx  TaskFormRHF.tsx  TasksList.tsx
tests/: cli.rs  import_legacy.rs
themes/: catppuccin-mocha.yaml  dracula.yaml  gruvbox-dark.yaml  vesper.yaml
