[package]
name = "worklog"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "wl"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
serde_norway = "0.9"
color-eyre = "0.6"
ratatui-textarea = { version = "0.9", default-features = false }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
